--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,33 @@
-spring.application.name=MyDictionary
+# **************************** データベース接続設定 *************************************************************************
+
+
+# データベースのURL、エンコーディング、タイムゾーンを設定(データベース名：dictionary_db)
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dictionary_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Tokyo
+
+# データベースのユーザー名を設定
+spring.datasource.username=root
+
+# データベースのパスワードを設定
+spring.datasource.password=
+
+# ***********************************************************************************************************************
+
+
+
+# ******************************* MyBatisの設定 **************************************************************************
+
+
+# MyBatisのマッパーXMLの場所を指定(src/main/resources/mybatis/の中にあるxmlを指定)
+mybatis.mapper-locations=classpath*:/mybatis/**/*.xml
+
+# データベースのカラム名（アンダースコア形式）とJavaのフィールド名（キャメルケース形式）のマッピングを有効にする(DB(team_id) <--> Java(teamId)をヨロシク変換してくれる)
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# MyBatisのエイリアスを自動的に登録するパッケージを指定
+mybatis.type-aliases-package=com.example.app.domain
+
+# MyBatisのマッパーに関するログレベルをDEBUGに設定
+logging.level.com.example.app.mapper.*=DEBUG
+
+# ************************************************************************************************************************
+
