--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
 			<groupId>de.svenkubiak</groupId>
 			<artifactId>jBCrypt</artifactId>
 			<version>0.4.3</version>
+		</dependency>
+		<!-- 別途追加：Spring Security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
