--- a/pom.xml
+++ b/pom.xml
@@ -70,11 +70,14 @@
 			<version>0.4.3</version>
 		</dependency>
 		<!-- 別途追加：Spring Security -->
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency> -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
-
 	</dependencies>
 	<build>
 		<plugins>
