--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,8 @@ logging.level.com.example.app.mapper.*=DEBUG
 
 # ************************************************************************************************************************
 
+
+# セッションの有効期限 （テスト用）
+#server.servlet.session.timeout=1s
+# セッションの有効期限 30分(本番用）
+server.servlet.session.timeout=30m
