--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>MyDictionary</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>MyDictionary</name>
+	<name>My辞典ず</name>
 	<description>単語登録・閲覧用アプリ</description>
 	<properties>
 		<java.version>17</java.version>
